--- a/associations.html
+++ b/associations.html
@@ -2,7 +2,7 @@
 <html lang='fr'>
 <head><meta charset='utf-8'><meta name='viewport' content='width=device-width,initial-scale=1'>
 <title>Associations - CIEL</title>
-<link rel='stylesheet' href='css/style.css'>
+<link rel='stylesheet' href='style.css'>
 </head>
 <body>
 <header class="site-header">
@@ -45,3 +45,4 @@
 </main>
 <footer class="site-footer"><div class="footer-inner">&copy; 2025 Section CIEL - Associations</div></footer>
 </body></html>
+
