--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
   <title>Carte des lycées CIEL - France</title>
 
   <!-- Style principal -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- Leaflet -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -188,3 +188,4 @@
 
 </body>
 </html>
+
