--- a/entreprises.html
+++ b/entreprises.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Section CIEL - Accueil</title>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 <script src="https://unpkg.com/scrollreveal"></script>
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
@@ -163,3 +163,4 @@ lycees.forEach(l => {
 <script src="js/script.js"></script> <!-- pour le menu hamburger -->
 </body>
 </html>
+
