--- a/formation.html
+++ b/formation.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Formation CIEL</title>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
@@ -224,3 +224,4 @@
 <footer class="site-footer"><div class="footer-inner">&copy; 2025 Section Formation</div></footer>
 <script src="js/script.js"></script>
 </body></html>
+
