--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ INDEXT.HTML
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Section CIEL - Accueil</title>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 <script src="https://unpkg.com/scrollreveal"></script>
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
@@ -108,3 +108,4 @@ INDEXT.HTML
 <script src="js/script.js"></script>
 </body>
 </html>
+
