--- a/job_form.html
+++ b/job_form.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Forum CIEL - Job Formation</title>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 <style>
 /* Styles forum multi-sujets */
 .forum-container {
@@ -201,3 +201,4 @@ if(sujets.length && sujetSelectionne !== null) afficherReponses();
 </script>
 </body>
 </html>
+
