--- a/galerie.html
+++ b/galerie.html
@@ -3,12 +3,101 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Section CIEL - Accueil</title>
+<title>Événements - Lycée Fourcade / Étoile</title>
 <link rel="stylesheet" href="style.css">
-<script src="https://unpkg.com/scrollreveal"></script>
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+
+<style>
+body {
+  margin: 0;
+  font-family: Inter, Arial, Helvetica, sans-serif;
+  background: #0b0f17;
+  color: #e7eef6;
+}
+
+/* ===== HEADER ===== */
+.site-header { 
+  position: fixed; 
+  top: 0; left:0; right:0; 
+  z-index: 1200; 
+  background: linear-gradient(90deg,#003a78,#0066cc); 
+}
+.header-inner { 
+  display: flex; 
+  align-items: center; 
+  justify-content: space-between; 
+  max-width: 1200px; 
+  margin: 0 auto; 
+  padding: 12px 16px; 
+}
+.brand { display: flex; align-items: center; gap: 12px; }
+.logo-mark { width: 48px; height: 48px; background: linear-gradient(135deg,#003a78,#00f0d1); border-radius: 10px; display: flex; align-items: center; justify-content: center; font-weight: 700; color:#021020; }
+.brand-text h1 { margin:0; font-size:1rem; }
+.brand-text p { margin:0; font-size:0.82rem; color:#b6c7da; }
+
+nav.main-nav ul { list-style: none; display: flex; gap: 12px; margin:0; padding:0; }
+nav.main-nav a { 
+  color: rgb(255, 255, 255); 
+  padding: 8px 12px; 
+  border-radius: 8px; 
+  font-weight:700; 
+  text-decoration: none;
+}
+
+.nav-toggle { display: none; font-size:1.5rem; background:none; border:none; color:rgb(255, 255, 255); cursor:pointer; }
+
+/* ===== MOBILE ===== */
+@media(max-width:880px) {
+  nav.main-nav { 
+    display: none; 
+    flex-direction: column;
+    position: fixed; 
+    top: 60px; left:0; right:0; 
+    background:#0f1721; 
+    padding: 12px 16px; 
+    z-index:1300; 
+  }
+  nav.main-nav.open { display: flex; }
+  nav.main-nav ul { flex-direction: column; gap:8px; padding-left:12px; }
+  .nav-toggle { display: block; }
+}
+
+/* ===== CONTENU ===== */
+main.container {
+  max-width: 1200px;
+  margin: 80px auto 24px auto; /* marge top = hauteur menu */
+  padding: 0 18px;
+}
+
+.card {
+  background: #0f1721;
+  padding: 18px;
+  border-radius: 12px;
+  box-shadow: 0 12px 30px rgba(0,0,0,0.5);
+  margin-bottom: 24px;
+}
+
+h2 { color: #00f0d1; margin-top: 0; }
+p { color: #98a0b3; line-height: 1.5; }
+
+ul.event-list { list-style: none; padding: 0; }
+ul.event-list li {
+  margin-bottom: 12px;
+  background: rgba(0,240,209,0.1);
+  padding: 12px;
+  border-radius: 8px;
+}
+
+/* Footer */
+footer.site-footer {
+  background: linear-gradient(90deg,#003a78,#0066cc);
+  padding: 18px;
+  text-align: center;
+  color: white;
+  margin-top: 20px;
+}
+</style>
 </head>
+
 <body>
 <header class="site-header">
   <div class="header-inner">
@@ -28,147 +117,12 @@
         <li><a href="entreprises.html">Partenaires</a></li>
         <li><a href="contacts.html">Contacts</a></li>
         <li><a href="associations.html">Associations</a></li>
-        <li><a href="galerie.html"style="background:#00f0d1">Lycée-Fourcade</a></li>
+        <li><a href="galerie.html"" style="background:#00f0d1">Lycée-Fourcade</a></li>
         <li><a href="job_form.html" class="btn-nav">Forum</a></li>
       </ul>
     </nav>
   </div>
 </header>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!doctype html>
-<html lang="fr">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Événements - Lycée Fourcade / Étoile</title>
-<link rel="stylesheet" href="css/style.css">
-
-<style>
-body {
-  margin: 0;
-  font-family: Inter, Arial, Helvetica, sans-serif;
-  background: #0b0f17;
-  color: #e7eef6;
-}
-
-/* Menu fixe en haut */
-.top-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 8px;
-  padding: 10px 5px;
-  background: rgba(0,0,0,0.85);
-  z-index: 1000;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.5);
-}
-
-.top-menu a {
-  display: inline-block;
-  padding: 8px 12px;
-  border-radius: 8px;
-  background: #00f0d1;
-  color: #021020;
-  text-decoration: none;
-  font-weight: 700;
-  text-align: center;
-  transition: 0.2s;
-  font-size: 0.9rem;
-}
-
-.top-menu a:hover {
-  background: #0066cc;
-  color: #fff;
-}
-
-/* Décalage contenu pour menu fixe */
-main.container {
-  max-width: 1200px;
-  margin: 80px auto 24px auto; /* marge top = hauteur menu */
-  padding: 0 18px;
-}
-
-.card {
-  background: #0f1721;
-  padding: 18px;
-  border-radius: 12px;
-  box-shadow: 0 12px 30px rgba(0,0,0,0.5);
-  margin-bottom: 24px;
-}
-
-h2 {
-  color: #00f0d1;
-  margin-top: 0;
-}
-
-p {
-  color: #98a0b3;
-  line-height: 1.5;
-}
-
-ul.event-list {
-  list-style: none;
-  padding: 0;
-}
-
-ul.event-list li {
-  margin-bottom: 12px;
-  background: rgba(0,240,209,0.1);
-  padding: 12px;
-  border-radius: 8px;
-}
-
-/* Footer */
-footer.site-footer {
-  background: linear-gradient(90deg,#003a78,#0066cc);
-  padding: 18px;
-  text-align: center;
-  color: white;
-  margin-top: 20px;
-}
-
-/* Responsive */
-@media(max-width:980px) {
-  .top-menu a { font-size: 0.8rem; padding: 6px 10px; }
-}
-
-@media(max-width:600px) {
-  .top-menu a { flex: 1 1 40%; font-size: 0.75rem; padding: 5px 8px; }
-}
-</style>
-</head>
-<body>
-
-
 
 <main class="container">
   <section class="card">
@@ -185,7 +139,6 @@ footer.site-footer {
     <h3>Pourquoi venir ?</h3>
     <ul class="event-list">
       <li>Découvrir les filières CIEL (cybersécurité, réseaux, électronique, informatique).</li>
-      
       <li>Rencontrer enseignants et élèves.</li>
       <li>Obtenir toutes les informations sur les stages et projets réalisés.</li>
     </ul>
@@ -206,6 +159,13 @@ footer.site-footer {
   &copy; 2025 Section CIEL — Lycées
 </footer>
 
-<script src="js/script.js"></script> <!-- Menu hamburger -->
+<script>
+// Script menu hamburger
+const navToggle = document.querySelector(".nav-toggle");
+const navMenu = document.querySelector(".main-nav");
+navToggle.addEventListener("click", () => { navMenu.classList.toggle("open"); });
+</script>
+
 </body>
 </html>
+
