--- a/entreprises.html
+++ b/entreprises.html
@@ -5,31 +5,35 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Carte entreprises — Stages CIEL (500+)</title>
 
-<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
 <style>
-  /* Ajustements légers locaux */
   body{margin:0;background:#0b0f17;color:#e7eef6;font-family:Inter,Arial,Helvetica,sans-serif}
   main{margin-top:84px;max-width:1200px;margin-left:auto;margin-right:auto;padding:0 18px}
   .card{background:#0f1721;padding:18px;border-radius:12px;box-shadow:0 12px 30px rgba(0,0,0,0.5)}
   #map{width:100%;height:760px;border-radius:10px;overflow:hidden;margin-top:12px}
-  .site-header{position:fixed;top:0;left:0;right:0;z-index:1200}
-  .header-inner{max-width:1200px;margin:0 auto;display:flex;align-items:center;gap:18px;justify-content:space-between;padding:12px 18px;background:linear-gradient(90deg,#003a78,#0066cc);}
+  
+  /* Header */
+  .site-header{position:fixed;top:0;left:0;right:0;z-index:1200;background:linear-gradient(90deg,#003a78,#0066cc);}
+  .header-inner{max-width:1200px;margin:0 auto;display:flex;align-items:center;gap:18px;justify-content:space-between;padding:12px 18px;}
   .brand{display:flex;gap:12px;align-items:center}
   .logo-mark{width:48px;height:48px;border-radius:10px;background:linear-gradient(135deg,#003a78,#00f0d1);display:flex;align-items:center;justify-content:center;font-weight:700;color:#021020}
   nav.main-nav ul{list-style:none;display:flex;gap:12px;margin:0;padding:0}
   nav.main-nav a{color:white;text-decoration:none;padding:8px 12px;border-radius:8px;font-weight:700}
-  nav.main-nav a.btn-nav{color:#ffffff}
+  
+  /* Hamburger */
+  .nav-toggle{display:none;font-size:1.5rem;background:none;border:none;color:white;cursor:pointer;}
   @media(max-width:880px){
-    nav.main-nav{display:none}
+    nav.main-nav { display:none; flex-direction:column; background:#0f1721; position:fixed; top:60px; left:0; right:0; padding:12px 0; z-index:1300; }
+    nav.main-nav.show { display:flex; }
+    nav.main-nav ul { flex-direction:column; gap:8px; padding-left:12px; }
+    .nav-toggle { display:block; }
   }
 </style>
 </head>
 <body>
 
-<!-- Menu identique à index.html -->
 <header class="site-header">
   <div class="header-inner">
     <div class="brand">
@@ -47,7 +51,7 @@
         <li><a href="index.html">Accueil</a></li>
         <li><a href="formation.html">Formation</a></li>
         <li><a href="projets.html">Projets</a></li>
-        <li><a href="entreprises.html"style="background:#00f0d1">Partenaires</a></li>
+        <li><a href="entreprises.html" style="background:#00f0d1">Partenaires</a></li>
         <li><a href="contacts.html">Contacts</a></li>
         <li><a href="associations.html">Associations</a></li>
         <li><a href="galerie.html">Lycée-Fourcade</a></li>
@@ -59,8 +63,8 @@
 
 <main>
   <section class="card">
-    <h2 style="color:#00f0d1;margin:0 0 px 0">Carte — entreprises pour stages CIEL </h2>
-    <p style="color:#98a0b3;margin:0 0 8px 0">Clique sur un point pour voir l'entreprise et la ville (sites approximatifs / implantations régionales).</p>
+    <h2 style="color:#00f0d1;margin:0 0 8px 0">Carte — entreprises pour stages CIEL </h2>
+    <p style="color:#98a0b3;margin:0 0 8px 0">Nous nous excusons, les sites sont approximatifs. Cliquez sur un point pour voir l'entreprise et la ville.</p>
     <div id="map"></div>
     <p style="color:#9aa8bd;margin-top:8px;font-size:0.9rem">Astuce : zoome pour distinguer les points proches. Les marqueurs sont placés sur la ville.</p>
   </section>
@@ -71,9 +75,12 @@
 </footer>
 
 <script>
-/* ---------- LISTES (entreprises + villes) ---------- */
+/* Hamburger menu */
+const navToggle = document.querySelector('.nav-toggle');
+const mainNav = document.querySelector('nav.main-nav');
+navToggle.addEventListener('click', () => { mainNav.classList.toggle('show'); });
 
-/* 1) Liste d'entreprises réelles (ESN, télécoms, industrie, cybersécurité, recherche, etc.) */
+/* Liste entreprises et villes */
 const companies = [
   "Orange","Capgemini","Sopra Steria","Atos","Thales","Dassault Systèmes","Safran","Schneider Electric","Alten",
   "Accenture","IBM","Microsoft","Google","Amazon Web Services","OVHcloud","Worldline","Inetum","Devoteam","CGI",
@@ -86,7 +93,6 @@ const companies = [
   "Thales Digital","NavalTech","Criteo","OVH","Amadeus","Sagemcom","Inria","CEA","CEA Tech","INSEAD Tech","ArianeGroup"
 ];
 
-/* 2) Liste villes françaises (centres / coordonnées précises des villes) — large couverture nationale, focus Sud */
 const cities = [
   {nom:"Paris", lat:48.8566, lon:2.3522},
   {nom:"Marseille", lat:43.2965, lon:5.3698},
@@ -146,7 +152,7 @@ const cities = [
   {nom:"Boulogne-Billancourt", lat:48.8356, lon:2.2394},
   {nom:"Rouen", lat:49.4432, lon:1.0993},
   {nom:"Calais", lat:50.9515, lon:1.8587},
-  {nom:"Gravelines", lat:51.0150, lon:2.1297}, // datacenter OVH
+  {nom:"Gravelines", lat:51.0150, lon:2.1297},
   {nom:"Sophia Antipolis", lat:43.6167, lon:7.0556},
   {nom:"Gardanne", lat:43.4410, lon:5.4580},
   {nom:"Vitrolles", lat:43.4165, lon:5.2156},
@@ -156,65 +162,33 @@ const cities = [
   {nom:"Salon de Provence", lat:43.6419, lon:5.0949}
 ];
 
-/* ---------- Construction dynamique pour atteindre un grand nombre de marqueurs ---------- */
-const targetCount = 520; // nombre de points souhaités (tu peux augmenter)
+/* Création des sites */
+const targetCount = 520;
 const sites = [];
 let i = 0;
-while (sites.length < targetCount) {
+while(sites.length<targetCount){
   const company = companies[i % companies.length];
   const city = cities[i % cities.length];
-  // créer un libellé type "Company - site régional (Ville)"
-  const name = `${company} — site ${city.nom}`;
-  // ajouter entrée
-  sites.push({
-    nom: name,
-    company: company,
-    ville: city.nom,
-    lat: city.lat,
-    lon: city.lon
-  });
+  sites.push({nom:`${company} — site ${city.nom}`, company, ville:city.nom, lat:city.lat, lon:city.lon});
   i++;
 }
 
-/* ---------- Carte Leaflet ---------- */
-const map = L.map('map').setView([44.0, 3.0], 6);
-
-// tuiles
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-  maxZoom: 18,
-  attribution: '&copy; OpenStreetMap contributors'
-}).addTo(map);
-
-// icone
+/* Carte Leaflet */
+const map = L.map('map').setView([44.0,3.0],6);
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:18,attribution:'&copy; OpenStreetMap contributors'}).addTo(map);
 const blueIcon = L.icon({
-  iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-blue.png',
-  shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
-  iconSize: [25,41],
-  iconAnchor: [12,41],
-  popupAnchor: [1,-34],
-  shadowSize: [41,41]
+  iconUrl:'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-blue.png',
+  shadowUrl:'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
+  iconSize:[25,41], iconAnchor:[12,41], popupAnchor:[1,-34], shadowSize:[41,41]
 });
-
-// ajouter les marqueurs — avec petit jitter pour éviter le recouvrement exact
-sites.forEach((s, idx) => {
-  const jitter = (Math.random() - 0.5) * 0.02; // ±0.01 deg ~ ±1km
-  const jitter2 = (Math.random() - 0.5) * 0.02;
-  const lat = s.lat + jitter;
-  const lon = s.lon + jitter2;
-
-  const popup = `<strong>${escapeHtml(s.company)}</strong><br><em>${escapeHtml(s.nom)}</em><br>${escapeHtml(s.ville)}<br><small>Implantation approximative</small>`;
-  L.marker([lat, lon], {icon: blueIcon}).addTo(map).bindPopup(popup);
+sites.forEach(s=>{
+  const jitter=(Math.random()-0.5)*0.02;
+  const jitter2=(Math.random()-0.5)*0.02;
+  const popup=`<strong>${escapeHtml(s.company)}</strong><br><em>${escapeHtml(s.nom)}</em><br>${escapeHtml(s.ville)}<br><small>Implantation approximative</small>`;
+  L.marker([s.lat+jitter,s.lon+jitter2],{icon:blueIcon}).addTo(map).bindPopup(popup);
 });
-
-// utilitaire simple pour échapper le HTML dans les popups
-function escapeHtml(str){
-  if(!str) return '';
-  return String(str).replace(/[&<>"'`=\/]/g, function(s){
-    return ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;','/':'&#x2F;','`':'&#x60;','=':'&#x3D;'})[s];
-  });
-}
+function escapeHtml(str){if(!str)return '';return String(str).replace(/[&<>"'`=\/]/g,s=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;','/':'&#x2F;','`':'&#x60;','=':'&#x3D;'})[s]);}
 </script>
-
-<script src="js/script.js"></script> <!-- si tu as le contrôle mobile/menu hamburger -->
 </body>
 </html>
+
