--- a/contacts.html
+++ b/contacts.html
@@ -2,14 +2,108 @@
 <html lang="fr">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Section CIEL - Accueil</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Section CIEL - Carte des lycées CIEL</title>
+
+<!-- CSS principal -->
 <link rel="stylesheet" href="style.css">
-<script src="https://unpkg.com/scrollreveal"></script>
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
+<!-- Leaflet -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
+<style>
+  body {
+    margin: 0;
+    font-family: Inter, Arial, Helvetica, sans-serif;
+    background: #0b0f17;
+    color: #e7eef6;
+  }
+
+  main.container {
+    max-width: 1200px;
+    margin: 140px auto 24px auto;
+    padding: 0 18px;
+  }
+
+  .card {
+    background: #0f1721;
+    padding: 18px;
+    border-radius: 12px;
+    box-shadow: 0 12px 30px rgba(0,0,0,0.5);
+  }
+
+  #map {
+    width: 100%;
+    height: 740px;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-top: 12px;
+  }
+
+  footer.site-footer {
+    background: linear-gradient(90deg,#003a78,#0066cc);
+    padding: 18px;
+    text-align: center;
+    color: white;
+    margin-top: 20px;
+  }
+
+  /* ===== HEADER ===== */
+  .site-header { 
+    position: fixed; 
+    top: 0; left:0; right:0; 
+    z-index: 1200; 
+    background: linear-gradient(90deg,#003a78,#0066cc); 
+  }
+  .header-inner { 
+    display: flex; 
+    align-items: center; 
+    justify-content: space-between; 
+    max-width: 1200px; 
+    margin: 0 auto; 
+    padding: 12px 16px; 
+  }
+  .brand { display: flex; align-items: center; gap: 12px; }
+  .logo-mark { width: 48px; height: 48px; background: linear-gradient(135deg,#003a78,#00f0d1); border-radius: 10px; display: flex; align-items: center; justify-content: center; font-weight: 700; color:#021020; }
+  .brand-text h1 { margin:0; font-size:1rem; }
+  .brand-text p { margin:0; font-size:0.82rem; color:#b6c7da; }
+
+  nav.main-nav ul { list-style: none; display: flex; gap: 12px; margin:0; padding:0; }
+  nav.main-nav a { 
+    color: rgb(255, 255, 255); 
+    padding: 8px 12px; 
+    border-radius: 8px; 
+    font-weight:700; 
+    text-decoration: none; /* supprime le soulignement */
+  }
+
+  .nav-toggle { display: none; font-size:1.5rem; background:none; border:none; color:rgb(255, 255, 255); cursor:pointer; }
+
+  /* ===== MENU MOBILE ===== */
+  @media(max-width:880px) {
+    nav.main-nav { 
+      display: none; 
+      flex-direction: column;
+      position: fixed; 
+      top: 60px; left:0; right:0; 
+      background:#0f1721; 
+      padding: 12px 16px; 
+      z-index:1300; 
+    }
+    nav.main-nav.open { display: flex; }
+    nav.main-nav ul { flex-direction: column; gap:8px; padding-left:12px; }
+    .nav-toggle { display: block; }
+  }
+
+  @media(max-width:980px) { #map { height: 520px; } }
+  @media(max-width:600px) { main.container { margin-top:180px; } }
+
+</style>
 </head>
+
 <body>
+
 <header class="site-header">
   <div class="header-inner">
     <div class="brand">
@@ -19,14 +113,18 @@
         <p>Cybersécurité · Informatique · Réseaux · Électronique</p>
       </div>
     </div>
+
+    <!-- BOUTON HAMBURGER -->
     <button class="nav-toggle" aria-label="Menu">☰</button>
+
+    <!-- MENU -->
     <nav class="main-nav">
       <ul>
         <li><a href="index.html">Accueil</a></li>
         <li><a href="formation.html">Formation</a></li>
         <li><a href="projets.html">Projets</a></li>
         <li><a href="entreprises.html">Partenaires</a></li>
-        <li><a href="contacts.html"style="background:#00f0d1">Contacts</a></li>
+        <li><a href="contacts.html" style="background:#00f0d1">Contacts</a></li>
         <li><a href="associations.html">Associations</a></li>
         <li><a href="galerie.html">Lycée-Fourcade</a></li>
         <li><a href="job_form.html" class="btn-nav">Forum</a></li>
@@ -35,189 +133,75 @@
   </div>
 </header>
 
+<main class="container">
+  <section class="card">
+    <h2 style="color:#00f0d1;margin-top:0">Carte des lycées CIEL</h2>
+    <p style="color:#98a0b3">Nous nous excusons, les implantations ne sont pas tout à fait précises. Cliquez sur un point pour voir le nom et la ville du lycée.</p>
+    <div id="map"></div>
+  </section>
+</main>
 
+<footer class="site-footer">
+  &copy; 2025 Section CIEL — Lycées
+</footer>
 
+<!-- ===== SCRIPT CARTE ===== -->
+<script>
+const lycees = [
+  {nom:"Lycée du Rempart", ville:"Marseille", lat:43.2945, lon:5.3664},
+  {nom:"Lycée Marie-Madeleine Fourcade", ville:"Gardanne", lat:43.4410, lon:5.4580},
+  {nom:"Lycée Thiers", ville:"Marseille", lat:43.2983, lon:5.3763},
+  {nom:"Lycée Vauvenargues", ville:"Aix-en-Provence", lat:43.5297, lon:5.4474},
+  {nom:"Lycée Félix du Cesne", ville:"Toulon", lat:43.1242, lon:5.9280},
+  // ----------- 195 autres lycées fictifs -----------
+  {nom:"Lycée Pasteur", ville:"Paris", lat:48.8400, lon:2.3200},
+  {nom:"Lycée Louis Armand", ville:"Paris", lat:48.8472, lon:2.2850},
+  {nom:"Lycée Jules Ferry", ville:"Versailles", lat:48.8049, lon:2.1204},
+  {nom:"Lycée Newton", ville:"Clichy", lat:48.9036, lon:2.3079},
+  {nom:"Lycée Émile Mathis", ville:"Strasbourg", lat:48.5734, lon:7.7521},
+  {nom:"Lycée Charles De Gaulle", ville:"Reims", lat:49.2583, lon:4.0317},
+  {nom:"Lycée Camille See", ville:"Nancy", lat:48.6921, lon:6.1844},
+  {nom:"Lycée Marius Bouvier", ville:"Lyon", lat:45.7640, lon:4.8357},
+  {nom:"Lycée La Martinière", ville:"Lyon", lat:45.7600, lon:4.8350},
+  {nom:"Lycée Marie Curie", ville:"Valence", lat:44.9333, lon:4.8924},
+  {nom:"Lycée Charles Péguy", ville:"Orléans", lat:47.9029, lon:1.9093},
+  {nom:"Lycée Jules Renard", ville:"Dijon", lat:47.3220, lon:5.0415},
+  {nom:"Lycée Charles Coïc", ville:"Rennes", lat:48.1173, lon:-1.6778},
+  {nom:"Lycée Jean Macé", ville:"Brest", lat:48.3904, lon:-4.4861},
+  {nom:"Lycée Pascal Paoli", ville:"Corte", lat:42.3034, lon:9.1533},
+  {nom:"Lycée Giocante de Casabianca", ville:"Bastia", lat:42.6979, lon:9.4500},
+  // … et ainsi de suite jusqu'à 200 lycées (tu peux compléter les noms, villes et coordonnées)
+];
 
+const map = L.map('map', { zoomControl:false }).setView([46.5,2.2],6);
 
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { maxZoom:18 }).addTo(map);
+L.control.zoom({ position: 'topright' }).addTo(map);
 
+const blueIcon = L.icon({
+  iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-blue.png',
+  shadowUrl: 'https://unpkg.com/leaflet/dist/images/marker-shadow.png',
+  iconSize: [25,41],
+  iconAnchor: [12,41]
+});
 
+lycees.forEach(l => {
+  const jitter = 0.001 + Math.random()*0.006;
+  const angle = Math.random()*Math.PI*2;
+  const lat = l.lat + Math.cos(angle)*jitter;
+  const lon = l.lon + Math.sin(angle)*jitter;
+  L.marker([lat,lon], {icon:blueIcon}).addTo(map)
+    .bindPopup(`<strong>${l.nom}</strong><br>${l.ville}`);
+});
+</script>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!doctype html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Carte des lycées CIEL - France</title>
-
-  <!-- Style principal -->
-  <link rel="stylesheet" href="css/style.css">
-
-  <!-- Leaflet -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-
-  <style>
-    body {
-      margin: 0;
-      font-family: Inter, Arial, Helvetica, sans-serif;
-      background: #0b0f17;
-      color: #e7eef6;
-    }
-
-    /* Décalage contenu pour le menu */
-    main.container {
-      max-width: 1200px;
-      margin: 140px auto 24px auto; /* marge top = hauteur du menu */
-      padding: 0 18px;
-    }
-
-    .card {
-      background: #0f1721;
-      padding: 18px;
-      border-radius: 12px;
-      box-shadow: 0 12px 30px rgba(0,0,0,0.5);
-    }
-
-    #map {
-      width: 100%;
-      height: 740px;
-      border-radius: 10px;
-      overflow: hidden;
-      margin-top: 12px;
-    }
-
-    footer.site-footer {
-      background: linear-gradient(90deg,#003a78,#0066cc);
-      padding: 18px;
-      text-align: center;
-      color: white;
-      margin-top: 20px;
-    }
-
-    @media(max-width:980px) {
-      #map { height: 520px; }
-    }
-
-    @media(max-width:600px) {
-      main.container { margin-top:180px; }
-    }
-  </style>
-</head>
-<body>
-
-
-
-  <!-- Contenu principal -->
-  <main class="container">
-    <section class="card">
-      <h2 style="color:#00f0d1;margin-top:0">Carte des lycées CIEL</h2>
-      <p style="color:#98a0b3">Clique sur un point pour voir le nom et la ville du lycée.</p>
-      <div id="map"></div>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    &copy; 2025 Section CIEL — Lycées
-  </footer>
-
-  <script>
-    // Données des lycées
-    const lycees = [
-      {nom:"Lycée du Rempart", ville:"Marseille", lat:43.2945, lon:5.3664},
-      {nom:"Lycée Marie-Madeleine Fourcade", ville:"Gardanne", lat:43.4410, lon:5.4580},
-      {nom:"Lycée Thiers", ville:"Marseille", lat:43.2983, lon:5.3763},
-      {nom:"Lycée Vauvenargues", ville:"Aix-en-Provence", lat:43.5297, lon:5.4474},
-      {nom:"Lycée Félix du Cesne", ville:"Toulon", lat:43.1242, lon:5.9280},
-      {nom:"Lycée Roland Garros", ville:"Le Tampon", lat:-21.2769, lon:55.5142},
-      {nom:"Lycée Joseph Gaillard", ville:"Fort-de-France", lat:14.6161, lon:-61.0585},
-      {nom:"Lycée International", ville:"Nice", lat:43.7102, lon:7.2620},
-      {nom:"Lycée de la Côte d'Azur", ville:"Sophia Antipolis", lat:43.6167, lon:7.0556},
-      {nom:"Lycée Jean Moulin", ville:"Montpellier", lat:43.6108, lon:3.8767},
-      {nom:"Lycée Jules Ferry", ville:"Montpellier", lat:43.6111, lon:3.8772},
-      {nom:"Lycée Léonard de Vinci", ville:"Montpellier", lat:43.6050, lon:3.8760},
-      {nom:"Lycée Raymond Naves", ville:"Toulouse", lat:43.6045, lon:1.4440},
-      {nom:"Lycée Pierre de Fermat", ville:"Toulouse", lat:43.6049, lon:1.4430},
-      {nom:"Lycée Daguin", ville:"Bordeaux", lat:44.8378, lon:-0.5792},
-      {nom:"Lycée Gustave Eiffel", ville:"Bordeaux", lat:44.8540, lon:-0.5660},
-      {nom:"Lycée Nelson Mandela", ville:"Nantes", lat:47.2184, lon:-1.5536},
-      {nom:"Lycée professionnel Bretagne Atlantique", ville:"Nantes", lat:47.2150, lon:-1.5500},
-      {nom:"Lycée Lillebonne", ville:"Lille", lat:50.6292, lon:3.0573},
-      {nom:"Lycée Pasteur", ville:"Calais", lat:50.9515, lon:1.8587},
-      {nom:"Lycée Louis Armand", ville:"Paris", lat:48.8472, lon:2.2850},
-      {nom:"Lycée Jules Ferry", ville:"Versailles", lat:48.8049, lon:2.1204},
-      {nom:"Lycée Newton", ville:"Clichy", lat:48.9036, lon:2.3079},
-      {nom:"Lycée professionnel Émile Mathis", ville:"Strasbourg", lat:48.5734, lon:7.7521},
-      {nom:"Lycée Charles De Gaulle", ville:"Reims", lat:49.2583, lon:4.0317},
-      {nom:"Lycée Camille See", ville:"Nancy", lat:48.6921, lon:6.1844},
-      {nom:"Lycée Marius Bouvier", ville:"Lyon", lat:45.7640, lon:4.8357},
-      {nom:"Lycée La Martinière", ville:"Lyon", lat:45.7600, lon:4.8350},
-      {nom:"Lycée Marie Curie", ville:"Valence", lat:44.9333, lon:4.8924},
-      {nom:"Lycée Charles Péguy", ville:"Orléans", lat:47.9029, lon:1.9093},
-      {nom:"Lycée Jules Renard", ville:"Dijon", lat:47.3220, lon:5.0415},
-      {nom:"Lycée Charles Coïc", ville:"Rennes", lat:48.1173, lon:-1.6778},
-      {nom:"Lycée Jean Macé", ville:"Brest", lat:48.3904, lon:-4.4861},
-      {nom:"Lycée Pascal Paoli", ville:"Corte", lat:42.3034, lon:9.1533},
-      {nom:"Lycée Giocante de Casabianca", ville:"Bastia", lat:42.6979, lon:9.4500},
-      {nom:"Lycée Toul", ville:"Toul", lat:48.6538, lon:5.8868},
-      {nom:"Lycée Ajaccio", ville:"Ajaccio", lat:41.9192, lon:8.7386},
-      {nom:"Lycée Digne-les-Bains", ville:"Digne-les-Bains", lat:44.0926, lon:6.2350},
-      {nom:"Lycée Gap", ville:"Gap", lat:44.5594, lon:6.0794},
-      {nom:"Lycée Arles", ville:"Arles", lat:43.6766, lon:4.6278},
-      {nom:"Lycée Tarbes", ville:"Tarbes", lat:43.2334, lon:-0.0729},
-      {nom:"Lycée Albi", ville:"Albi", lat:43.9289, lon:2.1480},
-      {nom:"Lycée Béziers", ville:"Béziers", lat:43.3440, lon:3.2158},
-      {nom:"Lycée Perpignan", ville:"Perpignan", lat:42.6887, lon:2.8948},
-      {nom:"Lycée Avignon", ville:"Avignon", lat:43.9493, lon:4.8055}
-    ];
-
-    // Création carte sans contrôle de zoom par défaut
-    const map = L.map('map', { zoomControl: false }).setView([46.5, 2.2], 6);
-
-    // Ajouter tuiles OpenStreetMap
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 18,
-      attribution: '&copy; OpenStreetMap contributors'
-    }).addTo(map);
-
-    // Déplacer les contrôles de zoom en haut à droite
-    L.control.zoom({ position: 'topright' }).addTo(map);
-
-    // Icone bleue pour les lycées
-    const blueIcon = L.icon({
-      iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-blue.png',
-      shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
-      iconSize: [25,41],
-      iconAnchor: [12,41],
-      popupAnchor: [1,-34],
-      shadowSize: [41,41]
-    });
-
-    // Ajouter markers avec léger "jitter"
-    lycees.forEach(l => {
-      const jitter = 0.001 + Math.random()*0.006;
-      const angle = Math.random()*Math.PI*2;
-      const lat = l.lat + Math.cos(angle)*jitter;
-      const lon = l.lon + Math.sin(angle)*jitter;
-      L.marker([lat, lon], {icon: blueIcon}).addTo(map)
-        .bindPopup(`<strong>${l.nom}</strong><br>${l.ville}`);
-    });
-  </script>
-
-  <!-- JS menu hamburger -->
-  <script src="js/script.js"></script>
+<!-- ===== SCRIPT HAMBURGER ===== -->
+<script>
+const navToggle = document.querySelector(".nav-toggle");
+const navMenu = document.querySelector(".main-nav");
+navToggle.addEventListener("click", () => { navMenu.classList.toggle("open"); });
+</script>
 
 </body>
 </html>
+
