--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
 <title>Section CIEL - Carte des lycées CIEL</title>
 
 <!-- CSS principal -->
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 
 <!-- Leaflet -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
@@ -204,4 +204,5 @@ navToggle.addEventListener("click", () => { navMenu.classList.toggle("open"); })
 
 </body>
 </html>
+
 
