--- a/associations.html
+++ b/associations.html
@@ -158,4 +158,74 @@
 
 </body>
 </html>
+<style>
+/* NAVBAR GLOBALE */
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: #0b0f17;
+  padding: 15px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 1000;
+}
+
+.logo {
+  font-size: 22px;
+  font-weight: 600;
+  color: #e7eef6;
+}
+
+/* BOUTON HAMBURGER */
+.nav-toggle {
+  cursor: pointer;
+  width: 35px;
+  height: 28px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.nav-toggle span {
+  display: block;
+  height: 4px;
+  background: #e7eef6;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+/* MENU */
+.main-nav {
+  position: fixed;
+  top: 0;
+  right: -250px;
+  width: 250px;
+  height: 100%;
+  background: #0f1724;
+  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  transition: 0.3s;
+  text-align: left; /* IMPORTANT – empêchait le texte d’être centré */
+}
+
+.main-nav.open {
+  right: 0;
+}
+
+.main-nav a {
+  padding: 10px 20px;
+  font-size: 20px;
+  color: #e7eef6;
+  text-decoration: none;
+}
+
+.main-nav a:hover {
+  color: #4cb5ff;
+}
+</style>
+
 
