--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ nav.main-nav a { color:white; padding:8px 12px; border-radius:8px; font-weight:7
       </div>
       <div style="margin-top:16px;">
         <a class="btn secondary" href="contacts.html">Carte des lycées (contacts)</a>
-        <a class="btn secondary" href="galerie.html">Voir la galerie</a>
+        <a class="btn secondary" href="galerie.html">Informations du Lycée Fourcade</a>
       </div>
     </div>
     <div class="hero-right">
@@ -161,4 +161,5 @@ navToggle.addEventListener('click', () => { mainNav.classList.toggle('show'); })
 </script>
 </body>
 </html>
+
 
